tests/baselines/reference/classWithOptionalParameter.errors.txt
==== tests/cases/conformance/types/namedTypes/classWithOptionalParameter.ts (4 errors) ====
    // classes do not permit optional parameters, these are errors
    
    class C {
        x?: string;
         ~
!!! error TS1112: A class member cannot be declared optional.
        f?() {}
         ~
!!! error TS1112: A class member cannot be declared optional.
    }
    
    class C2<T> {
        x?: T;
         ~
!!! error TS1112: A class member cannot be declared optional.
        f?(x: T) {}
         ~
!!! error TS1112: A class member cannot be declared optional.
    }